add custom targets for cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,8 @@ find_package(GTest REQUIRED)
 enable_testing()
 
 include_directories(./include
-                    ./include/matrix/include) 
+                    ./include/matrix/include
+                    ./include/matrix/include/Vector/include) 
 
 set(CMAKE_CXX_STANDARD          20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -21,3 +22,16 @@ set(CMAKE_CXX_EXTENSIONS        OFF)
 add_subdirectory(unit_tests)
 add_subdirectory(include/matrix)
 add_subdirectory(task)
+
+add_custom_target(unit_tests 
+    DEPENDS
+        vector_test
+        matrix_test
+        circuit_test
+)
+
+add_custom_target(circuit 
+    DEPENDS
+        unit_tests
+        currents
+)
