--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,5 @@
 [submodule "include/matrix"]
 	path = include/matrix
 	url = https://github.com/LegendaryHog/matrix.git
+[submodule "end_to_end/test_runner"]
+	url = https://github.com/LegendaryHog/test_runner.git
