--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ find_package(matrix QUIET)
 if(NOT matrix_FOUND)
     include(FetchContent)
     FetchContent_Declare(
-        Vector
+        matrix
         GIT_REPOSITORY https://github.com/LegendaryHog/matrix
         GIT_TAG        master
         OVERRIDE_FIND_PACKAGE
@@ -25,34 +25,28 @@ endif()
 
 find_package(matrix REQUIRED)
 
-
-
-include_directories(./include
-                    ./include/matrix/include
-                    ./include/matrix/include/Vector/include)
-
 set(CMAKE_CXX_STANDARD          20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS        OFF)
 
 aux_source_directory(src/ PROJECT_SOURCE_DIR)
-add_library(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR})
+add_library(${PROJECT_NAME} ${PROJECT_SOURCE_DIR})
 target_include_directories(${PROJECT_NAME} PUBLIC include/)
 
 add_subdirectory(unit_tests)
 add_subdirectory(task)
 
-add_custom_target(
-    unit_tests 
-    DEPENDS
-        vector_test
-        matrix_test
-        circuit_test
-)
+#add_custom_target(
+#    unit_tests 
+#    DEPENDS
+#        vector_test
+#        matrix_test
+#        circuit_test
+#)
 
-add_custom_target(
-    whole_project
-    DEPENDS
-        unit_tests
-        currents
-)
+#add_custom_target(
+#    whole_project
+#    DEPENDS
+#        unit_tests
+#        currents
+#)
