--- a/unit_tests/CMakeLists.txt
+++ b/unit_tests/CMakeLists.txt
@@ -1,10 +1,7 @@
-aux_source_directory(. SRC_LIST_1)
-aux_source_directory(../src SRC_LIST_2)
+aux_source_directory(. SRC_LIST)
 
-add_executable(circuit_test ${SRC_LIST_1} ${SRC_LIST_2})
+add_executable(circuit_test ${SRC_LIST})
 
-target_link_libraries(circuit_test PRIVATE ${GTEST_LIBRARIES} PRIVATE ${CMAKE_THREAD_LIBS_INIT})
-
-target_include_directories(circuit_test PRIVATE ../include)
+target_link_libraries(circuit_test PRIVATE ${GTEST_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${PROJECT_NAME} matrix)
 
 gtest_discover_tests(circuit_test)
