--- a/task/CMakeLists.txt
+++ b/task/CMakeLists.txt
@@ -1,3 +1,4 @@
-aux_source_directory(../src SRC_LIST)
-add_executable(currents currents.cpp ${SRC_LIST})
+add_executable(currents currents.cpp)
+
+target_link_libraries(currents PRIVATE ${PROJECT_NAME} matrix)
 
