add message about finding Matrix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,42 +11,48 @@ find_package(Threads REQUIRED)
 find_package(GTest REQUIRED)
 enable_testing()
 
-find_package(matrix QUIET)
+find_package(Matrix QUIET)
 
-if(NOT matrix_FOUND)
+if(NOT ${Matrix_FOUND})
     include(FetchContent)
     FetchContent_Declare(
-        matrix
+        Matrix
         GIT_REPOSITORY https://github.com/LegendaryHog/matrix
         GIT_TAG        master
         OVERRIDE_FIND_PACKAGE
     )
 endif()
 
-find_package(matrix REQUIRED)
+find_package(Matrix)
+if (${Matrix_FOUND})
+    message("-- Found Matrix: True")
+else()
+    message(FATAL_ERROR "-- Found Matrix: False")
+endif()
 
 set(CMAKE_CXX_STANDARD          20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS        OFF)
 
-aux_source_directory(src/ PROJECT_SOURCE_DIR)
-add_library(${PROJECT_NAME} ${PROJECT_SOURCE_DIR})
+aux_source_directory(src/ PROJECT_SOURCE_DIRECTORY)
+add_library(${PROJECT_NAME} ${PROJECT_SOURCE_DIRECTORY})
+target_link_libraries(${PROJECT_NAME} PRIVATE Matrix)
 target_include_directories(${PROJECT_NAME} PUBLIC include/)
 
 add_subdirectory(unit_tests)
 add_subdirectory(task)
 
-#add_custom_target(
-#    unit_tests 
-#    DEPENDS
-#        vector_test
-#        matrix_test
-#        circuit_test
-#)
+add_custom_target(
+    unit_tests 
+    DEPENDS
+        vector_test
+        matrix_test
+        circuit_test
+)
 
-#add_custom_target(
-#    whole_project
-#    DEPENDS
-#        unit_tests
-#        currents
-#)
+add_custom_target(
+    whole_project
+    DEPENDS
+        unit_tests
+        currents
+)
