--- a/task/CMakeLists.txt
+++ b/task/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_executable(currents currents.cpp)
 
-target_link_libraries(currents PRIVATE ${PROJECT_NAME} matrix)
+target_link_libraries(currents PRIVATE ${PROJECT_NAME} Matrix)
 
