--- a/unit_tests/CMakeLists.txt
+++ b/unit_tests/CMakeLists.txt
@@ -2,6 +2,6 @@ aux_source_directory(. SRC_LIST)
 
 add_executable(circuit_test ${SRC_LIST})
 
-target_link_libraries(circuit_test PRIVATE ${GTEST_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${PROJECT_NAME} matrix)
+target_link_libraries(circuit_test PRIVATE ${GTEST_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${PROJECT_NAME} Matrix)
 
 gtest_discover_tests(circuit_test)
