--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,19 +25,28 @@ endif()
 
 find_package(Matrix)
 if(${Matrix_FOUND})
-    message("-- Found Matrix: True")
+    message(STATUS "Found Matrix - done")
 else()
-    message(FATAL_ERROR "-- Found Matrix: False")
+    message(FATAL_ERROR "Didn't find Matrix")
 endif()
 
 set(END_TO_END_TESTING_ENABLED True)
-if(${END_TO_END_TESTING_ENABLED})
-    execute_process("git -C end_to_end/ clone https://github.com/LegendaryHog/test_runner.git" OUTPUT_QUIET)
+if(${END_TO_END_TESTING_ENABLED} AND NOT EXISTS "end_to_end/test_runner")
+    execute_process(COMMAND git -C end_to_end/ clone https://github.com/LegendaryHog/test_runner.git --quiet RESULT_VARIABLE RES)
+    if(${RES})
+        message(WARNING "Cannot clone end to end test runner lib")
+    endif()
+    execute_process(COMMAND rm -rf end_to_end/test_runner/.git OUTPUT_QUIET)
+    message(STATUS "End to end test runner lib was cloned - done")
 endif()
-
-if(NOT EXISTS "end_to_end/test_runner" AND ${END_TO_END_TESTING_ENABLED})
-    message(WARNING "Python lib to end to end testing not found.")
-    message(WARNING "If you don't need end to end tests set END_TO_END_TESTING_ENABLED in False")
+if(${END_TO_END_TESTING_ENABLED})
+    if(EXISTS "end_to_end/test_runner")
+        message(STATUS "Found test_runner - done")
+    else()
+        set(STR1 "Python lib to end to end testing not found.")
+        set(STR2 "If you don't need end to end tests set END_TO_END_TESTING_ENABLED in False")
+        message(WARNING "${STR1}\n${STR2}")
+    endif()
 endif()
 
 set(CMAKE_CXX_STANDARD          20)
