--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,16 +31,17 @@ else()
 endif()
 
 set(END_TO_END_TESTING_ENABLED True)
-if(${END_TO_END_TESTING_ENABLED} AND NOT EXISTS "end_to_end/test_runner")
-    execute_process(COMMAND git -C end_to_end/ clone https://github.com/LegendaryHog/test_runner.git --quiet RESULT_VARIABLE RES)
+set(END_TO_END_PATH ${CMAKE_CURRENT_SOURCE_DIR}/end_to_end/)
+if(${END_TO_END_TESTING_ENABLED} AND NOT EXISTS "${END_TO_END_PATH}/test_runner")
+    execute_process(COMMAND git -C ${END_TO_END_PATH} clone https://github.com/LegendaryHog/test_runner.git --quiet RESULT_VARIABLE RES)
     if(${RES})
         message(WARNING "Cannot clone end to end test runner lib")
     endif()
-    execute_process(COMMAND rm -rf end_to_end/test_runner/.git OUTPUT_QUIET)
+    execute_process(COMMAND rm -rf ${END_TO_END_PATH}/test_runner/.git OUTPUT_QUIET)
     message(STATUS "End to end test runner lib was cloned - done")
 endif()
 if(${END_TO_END_TESTING_ENABLED})
-    if(EXISTS "end_to_end/test_runner")
+    if(EXISTS "${END_TO_END_PATH}/test_runner")
         message(STATUS "Found test_runner - done")
     else()
         set(STR1 "Python lib to end to end testing not found.")
