hided fact of cloning test_runner

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,10 +35,10 @@ set(END_TO_END_PATH ${CMAKE_CURRENT_SOURCE_DIR}/end_to_end/)
 if(${END_TO_END_TESTING_ENABLED} AND NOT EXISTS "${END_TO_END_PATH}/test_runner")
     execute_process(COMMAND git -C ${END_TO_END_PATH} clone https://github.com/LegendaryHog/test_runner.git --quiet RESULT_VARIABLE RES)
     if(${RES})
-        message(WARNING "Cannot clone end to end test runner lib")
+        message(WARNING "Cannot install end to end test runner lib")
     endif()
     execute_process(COMMAND rm -rf ${END_TO_END_PATH}/test_runner/.git OUTPUT_QUIET)
-    message(STATUS "End to end test runner lib was cloned - done")
+    message(STATUS "End to end test runner lib was installed - done")
 endif()
 if(${END_TO_END_TESTING_ENABLED})
     if(EXISTS "${END_TO_END_PATH}/test_runner")
