--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,25 +23,25 @@ if(NOT ${Matrix_FOUND})
     )
 endif()
 
-find_package(Matrix)
+find_package(Matrix QUIET)
 if(${Matrix_FOUND})
     message(STATUS "Found Matrix - done")
 else()
     message(FATAL_ERROR "Didn't find Matrix")
 endif()
 
-set(END_TO_END_TESTING_ENABLED True)
-set(END_TO_END_PATH ${CMAKE_CURRENT_SOURCE_DIR}/end_to_end/)
-if(${END_TO_END_TESTING_ENABLED} AND NOT EXISTS "${END_TO_END_PATH}/test_runner")
-    execute_process(COMMAND git -C ${END_TO_END_PATH} clone https://github.com/LegendaryHog/test_runner.git --quiet RESULT_VARIABLE RES)
+set(END_TO_END_TESTING True CACHE STRING "")
+
+if(${END_TO_END_TESTING} AND NOT EXISTS "end_to_end/test_runner")
+    execute_process(COMMAND git -C end_to_end/ clone https:/github.com/LegendaryHog/test_runner.git --quiet RESULT_VARIABLE RES)
     if(${RES})
         message(WARNING "Cannot install end to end test runner lib")
     endif()
-    execute_process(COMMAND rm -rf ${END_TO_END_PATH}/test_runner/.git OUTPUT_QUIET)
+    execute_process(COMMAND rm -rf end_to_end/test_runner/.git OUTPUT_QUIET)
     message(STATUS "End to end test runner lib was installed - done")
 endif()
-if(${END_TO_END_TESTING_ENABLED})
-    if(EXISTS "${END_TO_END_PATH}/test_runner")
+if(${END_TO_END_TESTING})
+    if(EXISTS "end_to_end/test_runner")
         message(STATUS "Found test_runner - done")
     else()
         set(STR1 "Python lib to end to end testing not found.")
