--- a/unit_tests/CMakeLists.txt
+++ b/unit_tests/CMakeLists.txt
@@ -1,7 +1,4 @@
 aux_source_directory(. SRC_LIST)
-
 add_executable(circuit_test ${SRC_LIST})
-
-target_link_libraries(circuit_test PRIVATE ${GTEST_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${PROJECT_NAME} Matrix)
-
+target_link_libraries(circuit_test PRIVATE ${GTEST_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${PROJECT_NAME})
 gtest_discover_tests(circuit_test)
